--- a/_data/sites.yml
+++ b/_data/sites.yml
@@ -1318,6 +1318,11 @@
   size: 272
   last_checked: 2022-03-12
 
+- domain: joodaloop.com
+  url: https://joodaloop.com/ (Make sure you keep the trailing slash)
+  size: 143
+  last_checked: 2022-12-22 (YYYY-MM-DD)
+  
 - domain: jorp.xyz
   url: https://jorp.xyz/
   size: 281
